Added Virtual Thread Override of Task based solution